deploy/bitcode3d/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: edge_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: bitcode3d_ingress
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: bitcode3d
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: bitcode3d_service
                            timeout: 30s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: bitcode3d_service
      connect_timeout: 2s
      type: STRICT_DNS
      load_assignment:
        cluster_name: bitcode3d_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: bitcode3d
                      port_value: 8000
